# CMPS401

./: .gitignore  README.md
C/Sample_Code/: TEnviron.c  TLoop.c  TPointer.c  TScanf.c  TScope.c  TSel.c  TSimple.c  TStrtok.c  TStructUnion.c  TSub.c  TSystem.c  (+1 more)
Docs/: basic_linux_commands.md  git_setup.md  remote_access.md
Language_Study/: TSub.rs  User_Manual.docx  ~$Rust_Demo.pptx
PHP/: P3.html  README.md
Project/: .gitignore  README.md  run.sh
Project/server/: Cargo.toml
Project/server/src/: appstate.rs  config.rs  main.rs  matchmaker.rs  tictactoeController.rs  types.rs  ws.rs
Project/server/src/game_models/: mod.rs
Project/server/src/game_models/tictactoe/: mod.rs  old_tictactoeModel.rs
Project/server/src/models/: appstate.rs  gameroom.rs  mod.rs
Project/server/src/models/airhockey/: collision.rs  config.rs  mod.rs  model.rs  paddle.rs  puck.rs  table.rs
Project/server/src/models/rockpaperscissors/: model.rs
Project/server/src/models/tictactoe/: model.rs  old_tictactoeController.rs
Project/server/src/models/uno/: model.rs
Project/server/src/old/: match_.rs  old_main.rs
Project/server/src/routes/: airhockey_handler.rs  chat.rs  chat_handler.rs  chat_manager.rs  echo.rs  echo_handler.rs  gameroom.rs  gameroom_handler.rs  join_game.rs  mod.rs  rockpaperscissors_handler.rs  tictactoe_handler.rs  uno_handler.rs
Project/server/src/types/: appstate.rs  gameroom.rs  mod.rs  types.rs
Project/server/static_test_pages/: game_room.html  index.html  join_game.html  test1.html
Project/server/test/: index.html  join_game.html
fortran/: P1.f
(+66 files in other folders)
