[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws", "macros"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
futures-util = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }
features = "0.10.0"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
hyper = "1.7.0"

